platform/service-mesh/istio/security/authorization/transaction-service/allow-mesh-traffic.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-mesh-traffic
  namespace: transaction-service
spec:
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/transaction-service/sa/apigateway-service
