platform/service-mesh/istio/security/authorization/transaction-service/deny-all.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: transaction-service
spec: {}
